[package]
name = "srve"
version = "0.1.3"
authors = ["Eduard Vercaemer <vercaemereduard@gmail.com>"]
license = "MIT"
description = "Simple API for creating server client communication with TCP streams."
repository = "https://github.com/eduardvercaemer/srve/"
readme = "README.md"
keywords = ["network", "server", "tcp", "client"]
documentation = "https://docs.rs/srve/0.1.3/srve/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.124"
bincode = "1.3.2"
log = "0.4"

[dev-dependencies]
serde_derive = "1.0.124"
text_io = "0.1.8"
simple_logger = "1.11"